--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nurananto Scanlation</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Nurananto Scanlation</h1>
-  <input type="text" id="searchInput" placeholder="Cari manga..." />
-  <div id="mangaGrid" class="grid-container"></div>
+  <input type="text" id="searchInput" placeholder="Cari judul manga...">
+
+  <div class="grid-container" id="mangaGrid"></div>
 
   <script src="script.js"></script>
 </body>
