--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Nurananto Scanlation</h1>
-  <input type="text" id="searchInput" placeholder="Cari judul manga...">
+  <header>
+    <img src="logo.png" alt="Nurananto Scanlation" class="site-logo">
+    <input type="text" id="searchInput" placeholder="Cari judul manga...">
+  </header>
 
   <div class="grid-container" id="mangaGrid"></div>
 
