--- a/index.html
+++ b/index.html
@@ -8,12 +8,40 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Nurananto Scanlation" class="site-logo">
-    <input type="text" id="searchInput" placeholder="Cari judul manga...">
+    <div class="header-content">
+      <img src="logo.png" alt="Nurananto Scanlation" class="site-logo">
+      
+      <!-- Tombol Facebook di kanan atas, sejajar dengan logo -->
+      <a href="https://web.facebook.com/profile.php?id=61556658895013" target="_blank" class="facebook-link-header">
+        <svg class="facebook-icon" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+        </svg>
+        <span class="facebook-text">Nurananto Scanlation</span>
+      </a>
+    </div>
   </header>
+
+  <!-- Search Bar di bawah header, melintang penuh -->
+  <div class="search-section">
+    <input type="text" id="searchInput" placeholder="Cari judul manga...">
+  </div>
+
+  <!-- Donation Box Trakteer Embed di pojok kanan -->
+  <div class="donation-box" id="trakteerBox"></div>
 
   <div class="grid-container" id="mangaGrid"></div>
 
   <script src="script.js"></script>
+  
+  <!-- Trakteer Script - Load terakhir -->
+  <script type='text/javascript' src='https://cdn.trakteer.id/js/embed/trbtn.min.js' onload="initTrakteer()"></script>
+  <script type='text/javascript'>
+    function initTrakteer() {
+      if (typeof trbtn !== 'undefined') {
+        var trbtnId = trbtn.init('Dukung Saya di Trakteer', '#be1e2d', 'https://trakteer.id/NuranantoScanlation', 'https://cdn.trakteer.id/images/embed/trbtn-icon.png', '40');
+        trbtn.draw(trbtnId);
+      }
+    }
+  </script>
 </body>
 </html>
