--- a/index.html
+++ b/index.html
@@ -26,22 +26,14 @@
     <input type="text" id="searchInput" placeholder="Cari judul manga...">
   </div>
 
-  <!-- Donation Box Trakteer Embed di pojok kanan -->
-  <div class="donation-box" id="trakteerBox"></div>
+  <!-- Donation Box Trakteer - Custom Button -->
+  <a href="https://trakteer.id/NuranantoScanlation/tip" target="_blank" class="trakteer-button">
+    <img src="https://cdn.trakteer.id/images/embed/trakteer-icon.png" alt="Trakteer" class="trakteer-icon">
+    <span>Dukung Saya</span>
+  </a>
 
   <div class="grid-container" id="mangaGrid"></div>
 
   <script src="script.js"></script>
-  
-  <!-- Trakteer Script - Load terakhir -->
-  <script type='text/javascript' src='https://cdn.trakteer.id/js/embed/trbtn.min.js' onload="initTrakteer()"></script>
-  <script type='text/javascript'>
-    function initTrakteer() {
-      if (typeof trbtn !== 'undefined') {
-        var trbtnId = trbtn.init('Dukung Saya di Trakteer', '#be1e2d', 'https://trakteer.id/NuranantoScanlation', 'https://cdn.trakteer.id/images/embed/trbtn-icon.png', '40');
-        trbtn.draw(trbtnId);
-      }
-    }
-  </script>
 </body>
 </html>
