--- a/index.html
+++ b/index.html
@@ -26,15 +26,10 @@
     <input type="text" id="searchInput" placeholder="Cari judul manga...">
   </div>
 
-  <!-- Donation Box Trakteer - DIPERBAIKI: Logo Trakteer + Text baru -->
+  <!-- Donation Box Trakteer - Floating di bawah dengan lebar sama search bar -->
   <a href="https://trakteer.id/NuranantoScanlation" target="_blank" class="trakteer-button">
-    <!-- Logo Trakteer SVG -->
-    <svg class="trakteer-icon" viewBox="0 0 280 280" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path d="M140,0C62.68,0,0,62.68,0,140s62.68,140,140,140s140-62.68,140-140S217.32,0,140,0z M140,255c-63.41,0-115-51.59-115-115S76.59,25,140,25s115,51.59,115,115S203.41,255,140,255z"/>
-      <path d="M195.5,85h-111C78.15,85,73,90.15,73,96.5v87c0,6.35,5.15,11.5,11.5,11.5h111c6.35,0,11.5-5.15,11.5-11.5v-87C207,90.15,201.85,85,195.5,85z M187,165H93v-50h94V165z"/>
-      <circle cx="140" cy="140" r="15"/>
-    </svg>
-    <span>Donasi untuk beli RAW Chapter</span>
+    <img src="assets/trakteer-icon.png" alt="Trakteer" class="trakteer-icon">
+    <span>Donasi untuk Beli RAW Chapter</span>
   </a>
 
   <div class="grid-container" id="mangaGrid"></div>
