HTML DAN CSS FIX

--- a/info.html
+++ b/info.html
@@ -46,8 +46,7 @@
 
     <!-- Visitor Count - Class 11 (GANTI ARTIST) -->
     <div class="div11">
-      <span class="visitor-icon">👥</span>
-      <span class="visitor-label">Visitor:</span>
+      <span class="visitor-label">Views:</span>
       <span class="visitor-count loading" id="visitor-count">...</span>
     </div>
 
