--- a/info.html
+++ b/info.html
@@ -44,10 +44,16 @@
       </div>
     </div>
 
-    <!-- Visitor Count - Class 11 (GANTI ARTIST) -->
-    <div class="div11">
-      <span class="visitor-label">Views:</span>
-      <span class="visitor-count loading" id="visitor-count">...</span>
+    <!-- Visitor Count & Trakteer - Class 11 -->
+    <div class="views-trakteer-container">
+      <div class="div11">
+        <span class="visitor-label">Views:</span>
+        <span class="visitor-count loading" id="visitor-count">...</span>
+      </div>
+      <a href="https://trakteer.id/NuranantoScanlation" target="_blank" class="trakteer-button-mini">
+        <img src="assets/trakteer-icon.png" alt="Trakteer" class="trakteer-icon-mini">
+        <span>Donasi</span>
+      </a>
     </div>
 
     <!-- Genre - Class 12 -->
