CSS tiada hentinya

--- a/info.html
+++ b/info.html
@@ -51,7 +51,7 @@
         <span class="visitor-count loading" id="visitor-count">...</span>
       </div>
       <a href="https://trakteer.id/NuranantoScanlation" target="_blank" class="trakteer-button-mini">
-        <img src="assets/trakteer-icon.png" alt="Trakteer" class="trakteer-icon-mini">
+        <img src="assets/trakteer-icon.png" alt="Trakteer" class="trakteer-icon-mini" loading="lazy">
         <span>Donasi</span>
       </a>
     </div>
