--- a/reader.html
+++ b/reader.html
@@ -8,10 +8,9 @@
 </head>
 <body>
   <div class="parent">
-    <!-- Tombol 1: Judul Manga (Kembali ke Info) -->
+    <!-- Tombol 1: Judul Manga (Kembali ke Info) - TANPA LOGO PANAH -->
     <div class="div1">
       <button class="btn-title" onclick="backToInfo()">
-        <span class="back-icon">←</span>
         <span class="manga-title">Manga Title Here</span>
       </button>
     </div>
@@ -26,7 +25,7 @@
     <!-- Tombol 3: Mode Baca (Atas Tengah) -->
     <div class="div3">
       <button class="btn-mode" onclick="toggleReadMode()" id="modeBtn">
-        <span class="mode-icon">⬍</span>
+        <span class="mode-icon">⬇</span>
         <span class="mode-text">Webtoon</span>
       </button>
     </div>
@@ -67,7 +66,7 @@
     <!-- Tombol 8: Mode Baca (Bawah Tengah) -->
     <div class="div8">
       <button class="btn-mode" onclick="toggleReadMode()" id="modeBtn2">
-        <span class="mode-icon">⬍</span>
+        <span class="mode-icon">⬇</span>
         <span class="mode-text">Webtoon</span>
       </button>
     </div>
