--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="header-content">
-      <img src="logo.png" alt="Nurananto Scanlation" class="site-logo">
+      <img src="assets/logo.png" alt="Nurananto Scanlation" class="site-logo">
       
       <!-- Tombol Facebook di kanan atas, sejajar dengan logo -->
       <a href="https://web.facebook.com/profile.php?id=61556658895013" target="_blank" class="facebook-link-header">
