Update Tampilan dan tombol

--- a/info-manga.html
+++ b/info-manga.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="assets/logo.png" alt="Nurananto Scanlation" class="site-logo">
+            <a href="https://nurananto.github.io/NuranantoScanlation/" class="logo-link">
+                <img src="assets/logo.png" alt="Nurananto Scanlation" class="site-logo">
+            </a>
             
             <!-- Tombol Facebook di kanan atas, sejajar dengan logo -->
             <a href="https://web.facebook.com/profile.php?id=61556658895013" target="_blank" class="facebook-link-header">
@@ -94,12 +96,12 @@
             </div>
 
             <div class="description-box">
-                <h2 class="section-title">DESKRIPSI MANGA DISINI</h2>
+                <h2 class="section-title">SINOPSIS MANGA</h2>
                 <div id="descriptionContent" class="content-text"></div>
             </div>
 
             <div class="chapters-box">
-                <h2 class="section-title">CHAPTER LIST DISINI</h2>
+                <h2 class="section-title">DAFTAR CHAPTER</h2>
                 <div id="chapterList" class="chapter-list"></div>
             </div>
         </div>
