Fix jadi Websie

--- a/reader.html
+++ b/reader.html
@@ -3,45 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manga Reader</title>
+    <title>Reader - Nurananto Scanlation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reader.css">
 </head>
 <body>
-    <div class="loading" id="loading">
-        <div class="spinner"></div>
-        <div>Loading...</div>
-    </div>
-
-    <header class="header" id="header">
-        <a href="#" class="header-title" id="mangaTitle">Manga Reader</a>
-        <div class="header-controls">
-            <button class="btn btn-nav" id="prevChapterBtn">← Prev</button>
-            <button class="btn btn-chapter" id="chapterBtn">Chapter 1</button>
-            <button class="btn btn-nav" id="nextChapterBtn">Next →</button>
+    <!-- Header - Hanya Judul Manga -->
+    <header>
+        <div class="header-content">
+            <h1 id="mangaTitle" class="manga-title">Loading...</h1>
         </div>
     </header>
 
-    <!-- Chapter Selection Modal -->
-    <div class="modal" id="chapterModal">
+    <!-- Chapter Info Bar -->
+    <div class="chapter-info-bar">
+        <button id="btnBackToInfo" class="btn-back">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M19 12H5M12 19l-7-7 7-7"/>
+            </svg>
+            <span>Back to Info</span>
+        </button>
+        
+        <div class="chapter-title-display">
+            <h1 id="chapterTitle">Loading...</h1>
+        </div>
+        
+        <button id="btnChapterList" class="btn-chapter-list">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M3 12h18M3 6h18M3 18h18"/>
+            </svg>
+            <span>Chapters</span>
+        </button>
+    </div>
+
+    <!-- Reader Container -->
+    <div class="reader-container" id="readerContainer">
+        <!-- Pages will be loaded here -->
+    </div>
+
+    <!-- Navigation Controls -->
+    <div class="navigation-controls">
+        <button id="btnPrevChapter" class="nav-btn nav-btn-prev" disabled>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+            </svg>
+            <span>Previous</span>
+        </button>
+
+        <div class="page-indicator">
+            <span id="currentPageNum">0</span> / <span id="totalPagesNum">0</span>
+        </div>
+
+        <button id="btnNextChapter" class="nav-btn nav-btn-next" disabled>
+            <span>Next</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+            </svg>
+        </button>
+    </div>
+
+    <!-- Chapter List Modal -->
+    <div class="modal-overlay" id="modalOverlay">
         <div class="modal-content">
             <div class="modal-header">
                 <h2>Select Chapter</h2>
+                <button class="btn-close-modal" id="btnCloseModal">×</button>
             </div>
-            <div class="modal-body" id="chapterGrid">
+            <div class="modal-body" id="chapterListModal">
                 <!-- Chapters will be loaded here -->
             </div>
-            <button class="btn btn-close" id="closeModal">Close</button>
         </div>
     </div>
 
-    <div class="reader-container">
-        <div class="page-container" id="pageContainer">
-            <!-- Pages will be loaded here -->
-        </div>
+    <!-- Loading Overlay -->
+    <div class="loading-overlay active" id="loadingOverlay">
+        <div class="loading-spinner"></div>
+        <p>Loading chapter...</p>
     </div>
-
-    <div class="click-zone left" id="clickLeft"></div>
-    <div class="click-zone right" id="clickRight"></div>
 
     <script src="reader.js"></script>
 </body>
