Update Script and Index

--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
     <span>Donasi untuk Beli RAW Chapter</span>
   </a>
 
-  <div class="grid-container" id="mangaGrid"></div>
+  <!-- Loading indicator -->
+  <div id="loadingIndicator" class="loading-indicator">
+    <div class="spinner"></div>
+    <p>Loading manga list...</p>
+  </div>
+
+  <!-- Container untuk manga cards -->
+  <div class="manga-list-container" id="mangaListContainer"></div>
 
   <script src="script.js"></script>
 </body>
