--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   <!-- Container untuk manga cards -->
   <div class="manga-list-container" id="mangaListContainer"></div>
 
+  <!-- LOAD CONFIG FIRST! -->
+  <script src="manga-config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
