--- a/info-manga.html
+++ b/info-manga.html
@@ -123,6 +123,7 @@
         </div>
     </div>
 
+    <script src="manga-config.js"></script>
     <script src="info-manga.js"></script>
 </body>
 </html>
