--- a/reader.html
+++ b/reader.html
@@ -94,6 +94,7 @@
     <!-- Overlay untuk mencegah klik kanan -->
     <div class="protection-overlay"></div>
 
+    <script src="manga-config.js"></script>
     <script src="reader.js"></script>
 </body>
 </html>
