--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <span>Donasi untuk Beli RAW Chapter</span>
   </a>
 
+  <!-- IMPORT manga-config.js DULU sebelum script.js -->
+  <script src="manga-config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
