--- a/info-manga.html
+++ b/info-manga.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Info Manga</title>
+    <title>📖 Loading...</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/Logo 2.png">
+    <link rel="shortcut icon" type="image/png" href="assets/Logo 2.png">
+    <link rel="apple-touch-icon" href="assets/Logo 2.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -92,7 +97,10 @@
                 </div>
 
                 <!-- Link Buttons -->
-                <button class="sidebar-btn" id="btnMangadex">MANGADEX</button>
+                <button class="sidebar-btn" id="btnMangadex">
+                    <img src="assets/mangadex-logo.png" alt="MangaDex" class="btn-icon">
+                    <span>MANGADEX</span>
+                </button>
                 <button class="sidebar-btn" id="btnRaw">RAW</button>
             </div>
         </div>
