--- a/reader.html
+++ b/reader.html
@@ -6,7 +6,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#0a0a0a">
-    <title>Baca Manga - Reader</title>
+    <title>📖 Loading...</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/Logo 2.png">
+    <link rel="shortcut icon" type="image/png" href="assets/Logo 2.png">
+    <link rel="apple-touch-icon" href="assets/Logo 2.png">
     <link rel="stylesheet" href="reader.css">
 </head>
 <body>
