--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Nurananto Scanlation - Baca manga terjemahan bahasa Indonesia gratis">
   <title>Nurananto Scanlation</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="assets/Logo 2.png">
+  <link rel="shortcut icon" type="image/png" href="assets/Logo 2.png">
+  <link rel="apple-touch-icon" href="assets/Logo 2.png">
+  
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
