--- a/info-manga.html
+++ b/info-manga.html
@@ -101,7 +101,10 @@
                     <img src="assets/mangadex-logo.png" alt="MangaDex" class="btn-icon">
                     <span>MANGADEX</span>
                 </button>
-                <button class="sidebar-btn" id="btnRaw">RAW</button>
+                <button class="sidebar-btn" id="btnRaw">
+                    <img src="assets/book.png" alt="RAW" class="btn-icon">
+                    <span>RAW</span>
+                </button>
             </div>
         </div>
 
