--- a/info-manga.html
+++ b/info-manga.html
@@ -68,7 +68,7 @@
                     <!-- Rating Badge Mobile -->
                     <div class="rating-badge" id="ratingBadgeMobile">
                         <span class="star-icon">⭐</span>
-                        <span id="ratingScoreMobile" class="rating-number">0.0</span>
+                        <span id="ratingScoreMobile" class="rating-number">-</span>
                         <span class="rating-text">/10</span>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                 <!-- Rating Badge Desktop -->
                 <div class="rating-badge" id="ratingBadgeDesktop">
                     <span class="star-icon">⭐</span>
-                    <span id="ratingScore" class="rating-number">0.0</span>
+                    <span id="ratingScore" class="rating-number">-</span>
                     <span class="rating-text">/10</span>
                 </div>
             </div>
