--- a/reader.html
+++ b/reader.html
@@ -101,5 +101,16 @@
 
     <script src="manga-config.js"></script>
     <script src="reader.js"></script>
+
+    <script>
+        // Register Service Worker
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js')
+                    .then(reg => console.log('✅ Service Worker registered'))
+                    .catch(err => console.error('❌ SW registration failed:', err));
+            });
+        }
+    </script>
 </body>
 </html>
