--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
   <!-- IMPORT manga-config.js DULU sebelum script.js -->
   <script src="manga-config.js"></script>
   <script src="script.js"></script>
-
-    <script>
-        // Register Service Worker
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
-                    .then(reg => console.log('✅ Service Worker registered'))
-                    .catch(err => console.error('❌ SW registration failed:', err));
-            });
-        }
-    </script>
+  
+  <!-- Service Worker Registration -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js')
+          .then(reg => console.log('✅ SW registered'))
+          .catch(err => console.error('❌ SW failed:', err));
+      });
+    }
+  </script>
 </body>
 </html>
