--- a/info-manga.html
+++ b/info-manga.html
@@ -172,6 +172,12 @@
         </div>
     </div>
 
+    <!-- Donation Box Trakteer - Floating Button -->
+    <a href="https://trakteer.id/NuranantoScanlation" target="_blank" class="trakteer-button">
+        <img src="assets/trakteer-icon.png" alt="Trakteer" class="trakteer-icon">
+        <span>Donasi untuk Beli RAW Chapter</span>
+    </a>
+
     <script src="manga-config.js"></script>
     <script src="info-manga.js"></script>
     
